syntax = "proto3";

package envoy.extensions.filters.network.linux_network_stats.v3;

import "google/protobuf/duration.proto";

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.network.linux_network_stats.v3";
option java_outer_classname = "LinuxNetworkStatsProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Linux Network Stats]
// Echo :ref:`configuration overview <config_network_filters_linuxnetworkstats>`.
// [#extension: envoy.filters.network.linux_network_stats]

// Configuration for linux_network_stats network filter.
message Config {
  // The prefix to use when emitting statistics.
  string stat_prefix = 1 [(validate.rules).string = {min_len: 1}];

  // Period to update counters and gauges. If unset, updates only happen when the
  // connection is closed.
  google.protobuf.Duration update_period = 2;
}
